Ability to configure the visibility of Browser pane controls for using in iFrame (#707) - option for preventing last non-reference track from close, configuring "ignored" formats

--- a/client/client/app/components/ngbTracksView/ngbBrowserToolbarPanel/ngbBrowserToolbarPanel.scss
+++ b/client/client/app/components/ngbTracksView/ngbBrowserToolbarPanel/ngbBrowserToolbarPanel.scss
@@ -4,7 +4,7 @@ ngb-browser-toolbar-panel {
   display: block;
   position: absolute;
   width: 36px;
-  right: 28px;
+  right: 42px;
   margin-top: -36px;
   top: 40%;
   z-index: 2;
